# StarTransfer

./: .gitignore  LICENSE  README.md  config-example.yaml  config.py  database.py  logger.py  main.py  models.py  pyproject.toml  request_test.py  requirements.txt  run.py  test_1.py  test_2.py
controllers/: file_controller.py
models/: __init__.py  articles.py  files.py
routers/: __init__.py  article_router.py  file_router.py
schemas/: __init__.py  file_schemas.py  files.py
services/: __init__.py  file_services.py
