[tool.poetry]
name = "startrasnfer"
version = "0.1.0"
description = ""
authors = ["AdmiralDesu <skyrim.men024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
aioboto3 = "^10.2.0"
pyyaml = "^6.0"
uvicorn = "^0.20.0"
loguru = "^0.6.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"
requests = "^2.28.1"
aiohttp = "^3.8.3"
apscheduler = "^3.9.1.post1"
aiosqlite = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
