[tool.poetry]
name = "startrasnfer"
version = "0.1.0"
description = ""
authors = ["AdmiralDesu <skyrim.men024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
aioboto3 = "^10.4.0"
aiofiles = "^23.1.0"
sqlmodel = "^0.0.8"
python-multipart = "^0.0.6"
uvicorn = "^0.20.0"
loguru = "^0.6.0"
pyyaml = "^6.0"
apscheduler = "^3.10.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
