[tool.poetry]
name = "startrasnfer"
version = "0.1.0"
description = ""
authors = ["AdmiralDesu <skyrim.men024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.94.1"}
aioboto3 = "^11.0.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
pyyaml = "^6.0"
uvicorn = "^0.21.0"
arrow = "^1.2.3"
aiofiles = "^23.1.0"
pylint = "^2.17.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
